--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
     <meta charset="utf-8"></meta>
     <title>Basic info</title>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Quicksand:300,500,700|Montserrat:400,700">
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,500,700|Montserrat:400,700">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
 
